--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -5,7 +5,7 @@
   align-items: center;
 }
 
-.nav__links {
+.nav-links {
   display: flex;
   flex: 1;
   justify-content: flex-start;
@@ -13,7 +13,7 @@
   list-style: none;
 }
 
-.nav__link {
+.nav-link {
   color: var(--black-color);
   text-decoration: none;
   font-weight: 400;
@@ -23,11 +23,11 @@
   transition: opacity 0.3s ease-in-out;
 }
 
-.nav__link_active {
+.nav-link_active {
   font-weight: 500;
 }
 
-.nav__menu {
+.nav-menu {
   width: 100%;
   position: relative;
   display: none;
@@ -36,21 +36,21 @@
   color: var(--black-color);
 }
 
-.nav__menu-icon {
+.nav-menu__icon {
   margin-left: auto;
 }
 
-.nav__menu-icon_white {
+.nav-menu__icon_white {
   color: var(--white-color);
 }
 
-.nav__menu-close {
+.nav-menu__close {
   position: absolute;
   top: 13.44px;
   right: 13.44px;
 }
 
-.nav__menu-curtain {
+.nav-menu__curtain {
   position: fixed;
   right: 0;
   top: 0;
@@ -66,7 +66,7 @@
   z-index: 20;
 }
 
-.nav__menu-overlay {
+.nav-menu__overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -77,7 +77,7 @@
   z-index: 10;
 }
 
-.nav__profile {
+.nav-profile {
   display: flex;
   align-items: center;
   gap: 17px;
@@ -90,17 +90,17 @@
   transition: opacity 0.3s ease-in-out;
 }
 
-.nav__profile-icon {
+.nav-profile__icon {
   border-radius: 4px;
 }
 
-.nav__auth {
+.nav-auth {
   margin-left: auto;
   display: flex;
   gap: 30px;
 }
 
-.nav__auth-signin {
+.nav-auth__signin {
   width: 76px;
   height: 32px;
   background: var(--green-color);
@@ -117,7 +117,7 @@
   transition: opacity 0.3s ease-in-out;
 }
 
-.nav__auth-signup {
+.nav-auth__signup {
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
@@ -131,13 +131,13 @@
   transition: opacity 0.3s ease-in-out;
 }
 
-.nav__auth-signin:hover {
+.nav-auth__signin:hover {
   opacity: 0.8;
 }
 
-.nav__link:hover,
-.nav__profile:hover,
-.nav__auth-signup:hover {
+.nav-link:hover,
+.nav-profile:hover,
+.nav-auth__signup:hover {
   opacity: 0.7;
 }
 
@@ -146,17 +146,17 @@
     display: none;
   }
 
-  .nav__menu {
+  .nav-menu {
     display: flex;
   }
 
-  .nav__links {
+  .nav-links {
     flex-direction: column;
     align-items: center;
     gap: 28px;
   }
 
-  .nav__link {
+  .nav-link {
     font-weight: 500;
     font-size: 18px;
     line-height: 22px;
@@ -165,34 +165,37 @@
     border: 2px solid transparent;
   }
 
-  .nav__link_active {
+  .nav-link_active {
     border-bottom-color: var(--black-color);
   }
 }
 
 @media screen and (max-width: 520px) {
-  .nav__menu-icon {
+  .nav-menu__icon {
     width: 40px;
     height: 43px;
   }
 
-  .nav__auth {
+  .nav-auth {
     gap: 14px;
   }
 
-  .nav__auth-signin {
+  .nav-auth__signin {
     width: 54px;
     height: 26px;
     font-size: 10px;
   }
 
-  .nav__auth-signup {
+  .nav-auth__signup {
     font-size: 10px;
   }
 }
 
 @media screen and (min-width: 901px) {
-  .nav__link_white {
+  .nav-link_white {
+    color: var(--white-color);
+  }
+  .nav-profile__link_white {
     color: var(--white-color);
   }
 }
