--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -29,13 +29,14 @@
   flex-direction: column;
   gap: 24px;
   padding-bottom: 83px;
-  position: relative;
 }
 
 .form__error {
   position: absolute;
+  width: 100%;
+  text-align: center;
   left: 0;
-  bottom: 65px;
+  top: -30px;
   font-weight: 400;
   font-size: 10px;
   line-height: 12px;
@@ -48,6 +49,7 @@
   gap: 16px;
   align-items: center;
   width: 100%;
+  position: relative;
 }
 
 .form__button {
