--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,6 +1,5 @@
 .movie {
-  width: 100%;
-  max-width: 339px;
+  width: 270px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,14 +8,14 @@
 .movie__trailer-link {
   margin: 0;
   padding: 0;
-  display: block;
+  width: 100%;
+  height: 151px;
 }
 
 .movie__image {
-  display: block;
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center;
 }
 
@@ -74,7 +73,19 @@
   width: 100%;
 }
 
+@media screen and (max-width: 800px) {
+  .movie{
+    width: 339px;
+  }
+  .movie__trailer-link {
+    height: 190px;
+  }
+}
+
 @media screen and (max-width: 520px) {
+  .movie {
+    width: 300px;
+  }
   .movie__title {
     font-size: 12px;
     line-height: 15px;
@@ -87,5 +98,9 @@
 
   .movie__main {
     padding-top: 15px;
+  }
+
+  .movie__trailer-link {
+    height: 168px;
   }
 }
